--- a/client/src/assets/css/styles.css
+++ b/client/src/assets/css/styles.css
@@ -1,13 +1,126 @@
 /* Global Styles */
 
+
+html, body {
+    height:100%;
+}
+body {
+font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    font-size: 1.3rem;
+}
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
 .navbar {
     padding-top: 1.5rem;
     padding-bottom: .8rem;
 }
+Button.close {
+    box-sizing: content-box;
+    width: 1.5em;
+    height: 1.5em;
+    padding: .15em;
+    font-size: 1.3em;
+    color: #fff;
+    border: 1px solid white;
+    background: transparent;
+    border-radius: .25rem;
+    opacity: .5;
+    justify-self: flex-end;
+
+}
+
+
 
 footer {
     position:absolute;
 left:0;
 bottom:0;
 right:0;
+
+}
+.footer {
+    border-top: 8px dotted;
+    color: var(--success-lt);
+    border-style: double hidden hidden hidden;
+}
+.nav-link {
+    font-size: 1.4rem;
+}
+
+.navbar-expand-md .navbar-nav .nav-link {
+    padding-left: .8rem;
+}
+.container .contact {
+    min-height: 600px;
+}
+
+.mt100 {
+    margin-top: 100px;
+}
+
+
+#wrap {
+  width: 80%;
+  margin: 1em auto;
+  padding: 1em 5%;
+  background: #fff;
+  position: relative;
+}
+/* using background image */
+.inner {
+  position: relative;
+  z-index: 2;
+}
+/* fontawesome */
+#wrap:after {
+  content: "\f087"; 
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 400px;
+  color: lightblue;
+  top: 50%;
+  left: 50%;
+  margin: -300px 0 0 -200px;
+  z-index: 1;
+}
+/* image */
+
+#wrap:after {
+  content: "\f087"; 
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 400px;
+  color: lightblue;
+  top: 50%;
+  left: 50%;
+  margin: -300px 0 0 -200px;
+  z-index: 1;
+}
+
+.menu.fa {
+  font-size: 30px;
+  border: 1px solid #eee;
+  background: #f5f5f5;
+  color: #ddd;
+  padding: 3px 5px;
+  border-radius: 3px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  margin: 3px;
 }
